Fix menu button being transparent on mobile

--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -59,7 +59,7 @@ body {
       position: fixed;
       right: 0;
       top: 0;
-      z-index: 2;
+      z-index: 3;
     }
   }
 }
